ready for jean zay comp sep

--- a/notebooks/00_fgbuster_vs_furax.ipynb
+++ b/notebooks/00_fgbuster_vs_furax.ipynb
@@ -73,6 +73,9 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../data\")\n",
     "from generate_maps import save_to_cache\n",
     "\n",
     "nsides = [32]\n",
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,9 +235,9 @@
      "output_type": "stream",
      "text": [
       "Performance of the nll evaluation\n",
-      "65.2 ms ± 7.2 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "26.8 ms ± 1.48 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
       "Performance of the nll grad evaluation\n",
-      "186 ms ± 14.4 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "69.7 ms ± 980 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -276,12 +279,8 @@
     }
    ],
    "source": [
-    "wrong_params = jax.tree.map(\n",
-    "    lambda x: x + jax.random.normal(jax.random.PRNGKey(0)), best_params\n",
-    ")\n",
-    "print(\n",
-    "    f\"Wrong parameters grad {jax.tree.reduce(max, jax.grad(negative_log_prob)(wrong_params, d))}\"\n",
-    ")\n",
+    "wrong_params = jax.tree.map(lambda x: x + jax.random.normal(jax.random.PRNGKey(0)), best_params)\n",
+    "print(f\"Wrong parameters grad {jax.tree.reduce(max, jax.grad(negative_log_prob)(wrong_params, d))}\")\n",
     "print(\n",
     "    f\"Correct parameters grad {jax.tree.reduce(max, jax.grad(negative_log_prob)(best_params, d))}\"\n",
     ")"
@@ -310,9 +309,7 @@
     "L = negative_log_likelihood(best_params, nu=nu, N=invN, d=d)\n",
     "\n",
     "assert jax.tree.all(\n",
-    "    jax.tree.map(\n",
-    "        lambda x, y: jnp.isclose(x, y, rtol=1e-5), L, negative_log_prob(best_params, d)\n",
-    "    )\n",
+    "    jax.tree.map(lambda x, y: jnp.isclose(x, y, rtol=1e-5), L, negative_log_prob(best_params, d))\n",
     ")"
    ]
   },
@@ -386,9 +383,7 @@
    "source": [
     "best_params = {\"temp_dust\": 20.0, \"beta_dust\": 1.54, \"beta_pl\": -3.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(\n",
-    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
-    ")\n",
+    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10)\n",
     "result = scipy_solver.run(best_params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -414,7 +409,9 @@
       "<lambdifygenerated-9>:2: RuntimeWarning: overflow encountered in power\n",
       "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n",
       "<lambdifygenerated-10>:2: RuntimeWarning: overflow encountered in power\n",
-      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)*log(0.05*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n"
+      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)*log(0.05*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n",
+      "<lambdifygenerated-9>:2: RuntimeWarning: overflow encountered in multiply\n",
+      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n"
      ]
     },
     {
@@ -425,21 +422,7 @@
       "SVD of A failed -> logL_dB not updated\n",
       "SVD of A failed -> logL = -inf\n",
       "SVD of A failed -> logL = -inf\n",
-      "SVD of A failed -> logL = -inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<lambdifygenerated-9>:2: RuntimeWarning: overflow encountered in multiply\n",
-      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SVD of A failed -> logL = -inf\n",
       "SVD of A failed -> logL = -inf\n",
       "SVD of A failed -> logL = -inf\n",
       "SVD of A failed -> logL = -inf\n",
@@ -486,9 +469,7 @@
    "source": [
     "params = {\"temp_dust\": 20.0, \"beta_dust\": 2.54, \"beta_pl\": -3.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(\n",
-    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
-    ")\n",
+    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10)\n",
     "result = scipy_solver.run(params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -514,7 +495,9 @@
       "<lambdifygenerated-9>:2: RuntimeWarning: overflow encountered in power\n",
       "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n",
       "<lambdifygenerated-10>:2: RuntimeWarning: overflow encountered in power\n",
-      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)*log(0.05*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n"
+      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)*log(0.05*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n",
+      "<lambdifygenerated-9>:2: RuntimeWarning: overflow encountered in multiply\n",
+      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n"
      ]
     },
     {
@@ -528,21 +511,7 @@
       "SVD of A failed -> logL = -inf\n",
       "SVD of A failed -> logL = -inf\n",
       "SVD of A failed -> logL = -inf\n",
-      "SVD of A failed -> logL = -inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<lambdifygenerated-9>:2: RuntimeWarning: overflow encountered in multiply\n",
-      "  return 568.8620443215493*(0.05*nu)**beta_pl*numpy.expm1(0.01760867023799751*nu)**2*exp(-0.01760867023799751*nu)/(nu**2*numpy.expm1(0.3521734047599502)**2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SVD of A failed -> logL = -inf\n",
       "['Dust.beta_d', 'Dust.temp', 'Synchrotron.beta_pl']\n",
       "[ 1.53034346 19.97418092 -5.99479857]\n"
      ]
@@ -586,9 +555,7 @@
    "source": [
     "params = {\"temp_dust\": 20.0, \"beta_dust\": 2.54, \"beta_pl\": -6.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(\n",
-    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
-    ")\n",
+    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10)\n",
     "result = scipy_solver.run(params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -652,9 +619,7 @@
    "source": [
     "params = {\"temp_dust\": 25.0, \"beta_dust\": 2.54, \"beta_pl\": -6.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(\n",
-    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
-    ")\n",
+    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10)\n",
     "result = scipy_solver.run(params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -668,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
