--- a/notebooks/03_DistributedClusterFinder.ipynb
+++ b/notebooks/03_DistributedClusterFinder.ipynb
@@ -14,13 +14,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "from functools import partial\n",
     "\n",
     "import healpy as hp\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "from furax import HomothetyOperator\n",
     "from furax.comp_sep import (\n",
     "    negative_log_likelihood,\n",
@@ -29,7 +29,10 @@
     ")\n",
     "from furax.obs.stokes import Stokes\n",
     "from jax_grid_search import optimize\n",
-    "from jax_healpy import get_clusters"
+    "from jax_healpy import get_clusters\n",
+    "\n",
+    "sys.path.append(\"../data\")\n",
+    "from generate_maps import get_mask"
    ]
   },
   {
@@ -42,13 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GAL020 = np.load(\"../data/masks/GAL_PlanckMasks_64.npz\")[\"GAL020\"]\n",
-    "GAL040 = np.load(\"../data/masks/GAL_PlanckMasks_64.npz\")[\"GAL040\"]\n",
-    "GAL060 = np.load(\"../data/masks/GAL_PlanckMasks_64.npz\")[\"GAL060\"]"
+    "mask = get_mask(\"GAL020\")"
    ]
   },
   {
@@ -120,24 +121,24 @@
     "beta_dust_patches_count = 2000\n",
     "beta_pl_patches_count = 50\n",
     "max_centroids = 2000\n",
-    "(indices,) = jnp.where(GAL020 == 1)\n",
+    "(indices,) = jnp.where(mask == 1)\n",
     "\n",
     "temp_dust_patch_indices = get_clusters(\n",
-    "    GAL020,\n",
+    "    mask,\n",
     "    indices,\n",
     "    temp_dust_patches_count,\n",
     "    jax.random.PRNGKey(0),\n",
     "    max_centroids=max_centroids,\n",
     ")\n",
     "beta_dust_patch_indices = get_clusters(\n",
-    "    GAL020,\n",
+    "    mask,\n",
     "    indices,\n",
     "    beta_dust_patches_count,\n",
     "    jax.random.PRNGKey(0),\n",
     "    max_centroids=max_centroids,\n",
     ")\n",
     "beta_pl_patch_indices = get_clusters(\n",
-    "    GAL020,\n",
+    "    mask,\n",
     "    indices,\n",
     "    beta_pl_patches_count,\n",
     "    jax.random.PRNGKey(0),\n",
@@ -157,11 +158,9 @@
     "}\n",
     "\n",
     "\n",
-    "(indices,) = jnp.where(GAL020 == 1)\n",
+    "(indices,) = jnp.where(mask == 1)\n",
     "\n",
-    "masked_sky = jax.tree.map(\n",
-    "    lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d\n",
-    ")\n",
+    "masked_sky = jax.tree.map(lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d)\n",
     "masked_clusters = jax.tree.map(\n",
     "    lambda full_map: get_cutout_from_mask(full_map, indices).astype(jnp.int32),\n",
     "    patch_indices,\n",
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +236,7 @@
     }
    ],
    "source": [
-    "planck_mask = GAL020\n",
+    "planck_mask = mask\n",
     "(indices,) = jnp.where(planck_mask == 1)\n",
     "max_patches = 300\n",
     "T_d_patches = 150\n",
@@ -295,11 +294,9 @@
     "}\n",
     "\n",
     "\n",
-    "(indices,) = jnp.where(GAL020 == 1)\n",
+    "(indices,) = jnp.where(mask == 1)\n",
     "\n",
-    "masked_sky = jax.tree.map(\n",
-    "    lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d\n",
-    ")\n",
+    "masked_sky = jax.tree.map(lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d)\n",
     "masked_noise = HomothetyOperator(jnp.ones(1), _in_structure=masked_sky.structure)\n",
     "\n",
     "\n",
@@ -364,9 +361,7 @@
     "    )\n",
     "\n",
     "\n",
-    "bad_var = compute_minimum_variance(\n",
-    "    10, 20, 25, GAL020, indices, max_patches=max_centroids\n",
-    ")"
+    "bad_var = compute_minimum_variance(10, 20, 25, mask, indices, max_patches=max_centroids)"
    ]
   },
   {
@@ -379,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +382,7 @@
     "    temp_dust_patches_count,\n",
     "    beta_dust_patches_count,\n",
     "    beta_pl_patches_count,\n",
-    "    GAL020,\n",
+    "    mask,\n",
     "    indices,\n",
     "    max_patches=max_centroids,\n",
     ")"
@@ -437,7 +432,7 @@
     "        T_d_patches,\n",
     "        B_d_patches,\n",
     "        B_s_patches,\n",
-    "        GAL020,\n",
+    "        mask,\n",
     "        indices,\n",
     "        max_patches=max_centroids,\n",
     "    )\n",
