--- a/notebooks/04_EstimatingR.ipynb
+++ b/notebooks/04_EstimatingR.ipynb
@@ -258,11 +258,15 @@
     "    likelihood_terms = (2 * ell_range + 1) * (cl_obs / cl_model + np.log(cl_model))\n",
     "    return -0.5 * f_sky * np.sum(likelihood_terms)\n",
     "\n",
+    "\n",
     "def estimate_r(cl_obs, ell_range, cl_bb_r1, cl_bb_lens, Wn_cl_bb, r_grid, f_sky):\n",
     "    r_best_list, sigma_r_pos_list, sigma_r_neg_list, L_values_list = [], [], [], []\n",
-    "    logL_grid = np.array([\n",
-    "        log_likelihood(r, ell_range, cl_obs, cl_bb_r1, cl_bb_lens, Wn_cl_bb, f_sky) for r in r_grid\n",
-    "    ])\n",
+    "    logL_grid = np.array(\n",
+    "        [\n",
+    "            log_likelihood(r, ell_range, cl_obs, cl_bb_r1, cl_bb_lens, Wn_cl_bb, f_sky)\n",
+    "            for r in r_grid\n",
+    "        ]\n",
+    "    )\n",
     "    L = np.exp(logL_grid - np.max(logL_grid))\n",
     "    r_best = r_grid[np.argmax(L)]\n",
     "\n",
@@ -280,6 +284,7 @@
     "    L_values_list.append(logL_grid)\n",
     "\n",
     "    return r_best_list, sigma_r_pos_list, sigma_r_neg_list, L_values_list\n",
+    "\n",
     "\n",
     "# Define f_sky (e.g., 0.5 for half the sky)\n",
     "f_sky = 0.5\n",
