Update Sigma with noise rate

--- a/notebooks/04_EstimatingR.ipynb
+++ b/notebooks/04_EstimatingR.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
     "f_landscapes = FrequencyLandscape(nside, nu, \"IQU\")\n",
     "\n",
     "sigma = get_noise_sigma_from_instrument(instrument, nside, stokes_type=\"IQU\")\n",
-    "N = NoiseDiagonalOperator(sigma**2, _in_structure=f_landscapes.structure)\n",
+    "N = NoiseDiagonalOperator((sigma * noise_ratio) ** 2, _in_structure=f_landscapes.structure)\n",
     "\n",
     "\n",
     "def Wn_sample(seed):\n",
