--- a/notebooks/02_ValidationModel.ipynb
+++ b/notebooks/02_ValidationModel.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
     "sigma = get_noise_sigma_from_instrument(instrument, nside, stokes_type=\"QU\")\n",
     "noise = white_noise * sigma\n",
     "noised_d = masked_d + noise\n",
-    "N = NoiseDiagonalOperator(sigma**2, _in_structure=masked_d.structure)\n",
+    "N = NoiseDiagonalOperator((sigma* noise_ratio)**2, _in_structure=masked_d.structure)\n",
     "\n",
     "\n",
     "best_nll = negative_log_likelihood_fn(\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
     "        noise = white_noise * sigma\n",
     "        noised_d = masked_d + noise\n",
     "\n",
-    "        N = NoiseDiagonalOperator(sigma**2, _in_structure=masked_d.structure)\n",
+    "        N = NoiseDiagonalOperator((sigma* noise_ratio)**2, _in_structure=masked_d.structure)\n",
     "        patch_indices = {\n",
     "            \"temp_dust_patches\": T_d_patches,\n",
     "            \"beta_dust_patches\": B_d_patches,\n",
