--- a/content/illustraions.ipynb
+++ b/content/illustraions.ipynb
@@ -16,7 +16,7 @@
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from jax_healpy import get_clusters , get_cutout_from_mask , combine_masks , from_cutout_to_fullmap\n",
+    "from jax_healpy import combine_masks, from_cutout_to_fullmap, get_clusters, get_cutout_from_mask\n",
     "from matplotlib.patches import Patch\n",
     "\n",
     "sys.path.append(\"../data\")\n",
@@ -206,16 +206,18 @@
     "npix = nside**2 * 12\n",
     "ipix = np.arange(npix)\n",
     "\n",
-    "ud_grades = [(64, 0, 2), (64, 4, 2), (64, 8, 4),(64, 8, 4), (64, 4, 2), (64, 0, 2)]\n",
+    "ud_grades = [(64, 0, 2), (64, 4, 2), (64, 8, 4), (64, 8, 4), (64, 4, 2), (64, 0, 2)]\n",
     "\n",
-    "ud_grades = jax.tree.map(lambda x : int(x * nside / 64) , ud_grades)\n",
+    "ud_grades = jax.tree.map(lambda x: int(x * nside / 64), ud_grades)\n",
     "previous_mask_size = {\n",
     "    \"beta_dust_patches\": 0,\n",
     "    \"temp_dust_patches\": 0,\n",
     "    \"beta_pl_patches\": 0,\n",
     "}\n",
-    "for udgrade, mask_name in zip(ud_grades,  [\"GAL020_U\", \"GAL040_U\",  \"GAL060_U\", \"GAL060_L\", \"GAL040_L\" , \"GAL020_L\"]):\n",
-    "    mask = get_mask(mask_name , nside=nside)\n",
+    "for udgrade, mask_name in zip(\n",
+    "    ud_grades, [\"GAL020_U\", \"GAL040_U\", \"GAL060_U\", \"GAL060_L\", \"GAL040_L\", \"GAL020_L\"]\n",
+    "):\n",
+    "    mask = get_mask(mask_name, nside=nside)\n",
     "    (indices,) = jnp.where(mask == 1)\n",
     "\n",
     "    def ud_grade(ipix, nside_in, nside_out):\n",
@@ -251,15 +253,17 @@
     "    maps_list.append(patch_indices)\n",
     "    masks.append(mask)\n",
     "\n",
+    "\n",
     "def normalize_array(arr):\n",
     "    unique_vals, indices = np.unique(arr, return_inverse=True)\n",
     "    return indices\n",
     "\n",
+    "\n",
     "full_mask = np.logical_or.reduce(masks, axis=0)\n",
-    "full_indices, = jnp.where(full_mask == 1)\n",
+    "(full_indices,) = jnp.where(full_mask == 1)\n",
     "\n",
     "full_map = combine_masks(maps_list, indices_list, nside)\n",
-    "full_map = get_cutout_from_mask(full_map , full_indices)\n",
+    "full_map = get_cutout_from_mask(full_map, full_indices)\n",
     "full_map = jax.tree.map(normalize_array, full_map)\n",
     "full_map = from_cutout_to_fullmap(full_map, full_indices, nside)\n",
     "\n",
@@ -270,7 +274,7 @@
     "\n",
     "hp.mollview(\n",
     "    full_map[\"beta_dust_patches\"],\n",
-    "    title=rf\"$\\beta_d$\",\n",
+    "    title=r\"$\\beta_d$\",\n",
     "    min=min_val,\n",
     "    max=np.max(full_map[\"beta_dust_patches\"]),\n",
     "    cbar=False,\n",
@@ -279,7 +283,7 @@
     ")\n",
     "hp.mollview(\n",
     "    full_map[\"temp_dust_patches\"],\n",
-    "    title=rf\"$T_d$\",\n",
+    "    title=r\"$T_d$\",\n",
     "    min=min_val,\n",
     "    max=np.max(full_map[\"temp_dust_patches\"]),\n",
     "    cbar=False,\n",
@@ -288,7 +292,7 @@
     ")\n",
     "hp.mollview(\n",
     "    full_map[\"beta_pl_patches\"],\n",
-    "    title=rf\"$\\beta_s$\",\n",
+    "    title=r\"$\\beta_s$\",\n",
     "    min=min_val,\n",
     "    max=np.max(full_map[\"beta_pl_patches\"]),\n",
     "    cbar=False,\n",
@@ -296,7 +300,7 @@
     "    bgcolor=(0, 0, 0, 0),\n",
     ")\n",
     "\n",
-    "plt.savefig(\"multires_patch_layout.pdf\", dpi=1200, bbox_inches=\"tight\", transparent=True)\n"
+    "plt.savefig(\"multires_patch_layout.pdf\", dpi=1200, bbox_inches=\"tight\", transparent=True)"
    ]
   },
   {
@@ -373,7 +377,7 @@
     "}\n",
     "\n",
     "for patch_count, mask_name in zip(\n",
-    "    patch_count_list, [\"GAL020_U\", \"GAL040_U\",  \"GAL060_U\", \"GAL060_L\", \"GAL040_L\" , \"GAL020_L\"]\n",
+    "    patch_count_list, [\"GAL020_U\", \"GAL040_U\", \"GAL060_U\", \"GAL060_L\", \"GAL040_L\", \"GAL020_L\"]\n",
     "):\n",
     "    mask = get_mask(mask_name, nside)\n",
     "    (indices,) = jnp.where(mask == 1)\n",
@@ -403,7 +407,7 @@
     "\n",
     "hp.mollview(\n",
     "    full_full_map[\"beta_dust_patches\"],\n",
-    "    title=rf\"$\\beta_d$\",\n",
+    "    title=r\"$\\beta_d$\",\n",
     "    min=min_val,\n",
     "    max=np.max(full_full_map[\"beta_dust_patches\"]),\n",
     "    cbar=False,\n",
@@ -412,7 +416,7 @@
     ")\n",
     "hp.mollview(\n",
     "    full_full_map[\"temp_dust_patches\"],\n",
-    "    title=rf\"$T_d$\",\n",
+    "    title=r\"$T_d$\",\n",
     "    min=min_val,\n",
     "    max=np.max(full_full_map[\"temp_dust_patches\"]),\n",
     "    cbar=False,\n",
@@ -421,7 +425,7 @@
     ")\n",
     "hp.mollview(\n",
     "    full_full_map[\"beta_pl_patches\"],\n",
-    "    title=rf\"$\\beta_s$\",\n",
+    "    title=r\"$\\beta_s$\",\n",
     "    min=min_val,\n",
     "    max=np.max(full_full_map[\"beta_pl_patches\"]),\n",
     "    cbar=False,\n",
@@ -449,10 +453,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import healpy as hp\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.gridspec as gridspec\n",
+    "import numpy as np\n",
     "\n",
     "nside = 64\n",
     "npix = 12 * nside**2\n",
@@ -464,17 +467,47 @@
     "figure = plt.figure(figsize=(8, 7))\n",
     "\n",
     "# Row 1\n",
-    "hp.mollview(random_map, title=\"Input CMB (Stokes Q)\", fig=fig, sub=(3, 2, 1), cbar=False, bgcolor=(0.0,) * 4)\n",
+    "hp.mollview(\n",
+    "    random_map, title=\"Input CMB (Stokes Q)\", fig=fig, sub=(3, 2, 1), cbar=False, bgcolor=(0.0,) * 4\n",
+    ")\n",
     "\n",
     "# Row 2\n",
-    "hp.mollview(random_other, title=\"Multi-Resolution Reconstruction\", fig=fig, sub=(3, 2, 3), cbar=False, bgcolor=(0.0,) * 4)\n",
-    "hp.mollview(np.abs(random_map - random_other), title=\"Multi-Resolution Residual\", fig=fig, sub=(3, 2, 4), cbar=False, bgcolor=(0.0,) * 4)\n",
+    "hp.mollview(\n",
+    "    random_other,\n",
+    "    title=\"Multi-Resolution Reconstruction\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 3),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
+    "hp.mollview(\n",
+    "    np.abs(random_map - random_other),\n",
+    "    title=\"Multi-Resolution Residual\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 4),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
     "\n",
     "# Row 3\n",
-    "hp.mollview(random_last, title=\"Clustering-Based Reconstruction\", fig=fig, sub=(3, 2, 5), cbar=False, bgcolor=(0.0,) * 4)\n",
-    "hp.mollview(np.abs(random_map - random_last), title=\"Clustering-Based Residual\", fig=fig, sub=(3, 2, 6), cbar=False, bgcolor=(0.0,) * 4)\n",
+    "hp.mollview(\n",
+    "    random_last,\n",
+    "    title=\"Clustering-Based Reconstruction\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 5),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
+    "hp.mollview(\n",
+    "    np.abs(random_map - random_last),\n",
+    "    title=\"Clustering-Based Residual\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 6),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
     "\n",
-    "fig.savefig(\"cmb_reconstruction_comparison_Q.pdf\", bbox_inches=\"tight\" , dpi=1200, transparent=True)\n"
+    "fig.savefig(\"cmb_reconstruction_comparison_Q.pdf\", bbox_inches=\"tight\", dpi=1200, transparent=True)"
    ]
   },
   {
@@ -494,10 +527,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import healpy as hp\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.gridspec as gridspec\n",
+    "import numpy as np\n",
     "\n",
     "nside = 64\n",
     "npix = 12 * nside**2\n",
@@ -509,17 +541,47 @@
     "figure = plt.figure(figsize=(8, 7))\n",
     "\n",
     "# Row 1\n",
-    "hp.mollview(random_map, title=\"Input CMB (Stokes U)\", fig=fig, sub=(3, 2, 1), cbar=False, bgcolor=(0.0,) * 4)\n",
+    "hp.mollview(\n",
+    "    random_map, title=\"Input CMB (Stokes U)\", fig=fig, sub=(3, 2, 1), cbar=False, bgcolor=(0.0,) * 4\n",
+    ")\n",
     "\n",
     "# Row 2\n",
-    "hp.mollview(random_other, title=\"Multi-Resolution Reconstruction\", fig=fig, sub=(3, 2, 3), cbar=False, bgcolor=(0.0,) * 4)\n",
-    "hp.mollview(np.abs(random_map - random_other), title=\"Multi-Resolution Residual\", fig=fig, sub=(3, 2, 4), cbar=False, bgcolor=(0.0,) * 4)\n",
+    "hp.mollview(\n",
+    "    random_other,\n",
+    "    title=\"Multi-Resolution Reconstruction\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 3),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
+    "hp.mollview(\n",
+    "    np.abs(random_map - random_other),\n",
+    "    title=\"Multi-Resolution Residual\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 4),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
     "\n",
     "# Row 3\n",
-    "hp.mollview(random_last, title=\"Clustering-Based Reconstruction\", fig=fig, sub=(3, 2, 5), cbar=False, bgcolor=(0.0,) * 4)\n",
-    "hp.mollview(np.abs(random_map - random_last), title=\"Clustering-Based Residual\", fig=fig, sub=(3, 2, 6), cbar=False, bgcolor=(0.0,) * 4)\n",
+    "hp.mollview(\n",
+    "    random_last,\n",
+    "    title=\"Clustering-Based Reconstruction\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 5),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
+    "hp.mollview(\n",
+    "    np.abs(random_map - random_last),\n",
+    "    title=\"Clustering-Based Residual\",\n",
+    "    fig=fig,\n",
+    "    sub=(3, 2, 6),\n",
+    "    cbar=False,\n",
+    "    bgcolor=(0.0,) * 4,\n",
+    ")\n",
     "\n",
-    "fig.savefig(\"cmb_reconstruction_comparison_U.pdf\", bbox_inches=\"tight\" , dpi=1200, transparent=True)\n"
+    "fig.savefig(\"cmb_reconstruction_comparison_U.pdf\", bbox_inches=\"tight\", dpi=1200, transparent=True)"
    ]
   }
  ],
