add Forgrounds and CMB to saved data

--- a/notebooks/02_ValidationModel.ipynb
+++ b/notebooks/02_ValidationModel.ipynb
@@ -109,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dust_nu0 = 150.0\n",
     "synchrotron_nu0 = 20.0\n",
-    "masked_d = simulate_D_from_params(\n",
+    "masked_d, _ = simulate_D_from_params(\n",
     "    best_params,\n",
     "    masked_clusters,\n",
     "    nu,\n",
